# litmus

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  README.md  pyproject.toml
app/: package-lock.json  package.json
app/app/: globals.css  layout.tsx  page.tsx
app/components/: badges.tsx  finding-card.tsx  live-progress.tsx  paper-card.tsx  recompute-runner.tsx
app/lib/: data.ts  labels.ts  supabase-admin.ts  supabase.ts  types.ts
app/scripts/: deploy.sh  validate-fixtures.mjs
docs/: SESSION_LOG.md  mcp.md
examples/contrib/: ph_bounds.py
litmus/: __init__.py  verify.py
litmus/adapters/: __init__.py  cli.py  mcp.py
litmus/app_backend/: __init__.py  supabase_io.py  worker.py
litmus/commons/: __init__.py  registry.py  sdk.py
litmus/core/: __init__.py  calibration.py  claim.py  finding.py  provenance.py  sandbox.py  schema.py  verifier.py
litmus/extract/: __init__.py  __main__.py  extractor.py  prompts.py
litmus/pipeline/: __init__.py  __main__.py  executor.py  gates.py  managed.py  managed_tools.py
litmus/plan/: __init__.py  planner.py
litmus/schemas/: __init__.py  audit.schema.json  claim.schema.json  finding.schema.json  verifier_manifest.schema.json
litmus/synth/: __init__.py  synthesizer.py
litmus/verifiers/: __init__.py  figure_vs_table.py  grim.py  mass_balance.py  percent_change.py  prose_vs_table.py  statcheck.py  sum_check.py  unit_consistency.py  yield_check.py
litmus/vision/: __init__.py  figure_reader.py
scripts/: load_corpus_to_supabase.py  regrade_audits.py
study/: benchmark_eval.py
study/corpus/: SOURCING-chemarxiv.md  manifest.json
study/discovery/: REPORT.md  archetypes.json  benchmark_eval.json  candidate-benchmark.json  catalog-biology-anon-retracted-oblongifolin-gem-resistance.json  catalog-biology-anon-retracted-stk39-osteosarcoma.json  catalog-biology-zhang2025-brd4-protac-fulvestrant-breast.json  catalog-chemistry-anon2026-triple-halide-perovskite-tandem.json  catalog-chemistry-araruna2025-lewis-acid-ionic-liquid-styrene.json  catalog-chemistry-arxiv-2604.14784-water-nanodroplet-efields.json  catalog-chemistry-arxiv-2605.09394-mace-finetuning-catalysis.json  catalog-chemistry-arxiv-2606.12779-qmc-orr-adsorption-pt111.json  catalog-chemistry-arxiv-2606.12999-pem-fuelcell-cathode-impedance.json  catalog-chemistry-arxiv-2606.13399-pzt-pfn-multiferroic-photocurrent.json  catalog-chemistry-arxiv-2606.13420-fecconib-melt-quenched-alloy.json  catalog-chemistry-arxiv-2606.13664-chiral-2d-perovskite-magnetotransport.json  catalog-chemistry-jana2025-co2-electroreduction-cu-zif.json  catalog-chemistry-jimenezcruz2026-pd-prolinate-catalysis.json  catalog-chemistry-oztoksoy2025-melt-strength-polypropylene.json  catalog-chemistry-roy2025-transfer-hydrogenation-furfural.json  catalog-chemistry-wanazman2025-polycarbodiimide-composite.json  catalog-economics-anchuri2026-gas-demand-elasticity-l1-l2.json  catalog-economics-goncalves2026-semiparametric-local-projections.json  catalog-medicine-gkekas2025-rct-laparoscopic-supervision.json  catalog-medicine-lin2025-nimotuzumab-gemcitabine-pancreatic.json  catalog-medicine-zhou2025-esketamine-low-opioid-anaesthesia.json  catalog-mehta-2018-overcoming-scaling-relations.json  catalog-mehta-2020-beyond-equilibrium.json  catalog-ml-xu2026-scllm-cross-modal-clustering.json  catalog-physics-singh2026-ultralow-thermal-conductivity.json  catalog-psychology-anon2024-rr-group-membership-individuating.json  catalog-psychology-bai2025-acute-exercise-executive-function.json  catalog-psychology-druckman2021-rr-elite-influence-coronavirus.json  (+2 more)
tests/: conftest.py  test_calibration.py  test_commons_sdk.py  test_core_roundtrip.py  test_extract_live.py  test_extract_unit.py  test_keyalign.py  test_managed.py  test_managed_live.py  test_mcp.py  test_pipeline.py  test_registry.py  test_sandbox.py  test_schemas.py  test_synth.py  test_verifiers_chem.py  test_verifiers_stats.py  test_verifiers_t2.py  test_verify.py  test_worker.py
(+79 files in other folders)
