[project]
name = "litmus"
version = "0.1.0"
description = "A self-extending, multi-domain instrument for auditing the published scientific literature with executable evidence."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Prateek Mehta" }]

# Framework runtime deps are deliberately minimal (DESIGN §3 P8: stdlib-first).
# These are NOT available inside the recompute sandbox — recompute scripts stay
# stdlib / declared-minimal. See litmus/core/sandbox.py.
dependencies = [
    "jsonschema>=4.21",
    "anthropic>=0.49",
    # The adapters/mcp.py server exposes LITMUS's audits as MCP tools (DESIGN §6.3). The
    # official Python SDK; `mcp[cli]` adds the optional dev runner. Not a recompute-sandbox dep.
    "mcp>=1.2",
]

[project.optional-dependencies]
# WS-B extraction-time preprocessing (DESIGN §15). NOT recompute-sandbox deps.
extract = ["pypdfium2>=4.30", "pdfplumber>=0.11", "pypdf>=4.3"]
# Declared, pinned science deps a recompute script may opt into (DESIGN §15, P8).
science = ["numpy>=1.26", "scipy>=1.12"]
dev = ["pytest>=8.0", "pytest-timeout>=2.3", "ruff>=0.6"]

[project.scripts]
litmus = "litmus.adapters.cli:main"
# The LITMUS MCP server over stdio (DESIGN §6.3, §15): exposes every audit capability as an MCP
# tool any AI science agent can call. Equivalent to `python -m litmus.adapters.mcp`.
litmus-mcp = "litmus.adapters.mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["litmus"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Deselect the live API/managed-agents integration tests by default — they make real Anthropic
# calls with long (600-900s) timeouts (test_managed_live ~9min, test_managed ~2min, test_synth ~90s),
# which dwarfs the rest of the suite (~35s). Run them explicitly with `pytest -m live` (needs
# ANTHROPIC_API_KEY + the managed-agents beta). The marker is registered so there's no warning.
addopts = '-q -m "not live"'
markers = [
    "live: makes real Anthropic API / managed-agents calls (slow; deselected by default)",
]

[tool.ruff]
line-length = 100
target-version = "py312"
